--- a/MiniSpotify/MiniSpotify/MainWindow.xaml
+++ b/MiniSpotify/MiniSpotify/MainWindow.xaml
@@ -1,9 +1,8 @@
-﻿<Window
+<Window
     x:Class="MiniSpotify.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:MiniSpotify"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Mini-Viewer"
     Width="400"
@@ -19,7 +18,118 @@
     WindowStyle="None"
     mc:Ignorable="d">
 
+    <Window.Resources>
+        <Style x:Key="ButtonTemplate" TargetType="Button">
+            <Setter Property="OverridesDefaultStyle" Value="True" />
+            <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border
+                            Name="border"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="Black"
+                            BorderThickness="0">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Opacity" Value="0.8" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="SliderRepeatButton" TargetType="RepeatButton">
+            <Setter Property="SnapsToDevicePixels" Value="true" />
+            <Setter Property="OverridesDefaultStyle" Value="true" />
+            <Setter Property="IsTabStop" Value="false" />
+            <Setter Property="Focusable" Value="false" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="RepeatButton">
+                        <Border
+                            Height="3"
+                            Background="Black"
+                            BorderBrush="Black"
+                            BorderThickness="1" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="SliderRepeatButton1" TargetType="RepeatButton">
+            <Setter Property="SnapsToDevicePixels" Value="true" />
+            <Setter Property="OverridesDefaultStyle" Value="true" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="RepeatButton">
+                        <Border
+                            Height="3"
+                            Background="#FFFFFF"
+                            BorderBrush="#FF1DB954"
+                            BorderThickness="5"
+                            SnapsToDevicePixels="True" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="SliderThumb" TargetType="Thumb">
+            <Setter Property="SnapsToDevicePixels" Value="true" />
+            <Setter Property="OverridesDefaultStyle" Value="true" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Thumb">
+                        <Ellipse
+                            Width="10"
+                            Height="10"
+                            Fill="#FFFFFF" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <ControlTemplate x:Key="Slider" TargetType="Slider">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" MinHeight="{TemplateBinding MinHeight}" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Track x:Name="PART_Track" Grid.Row="1">
+                    <Track.DecreaseRepeatButton>
+                        <RepeatButton Command="Slider.DecreaseLarge" Style="{StaticResource SliderRepeatButton1}" />
+                    </Track.DecreaseRepeatButton>
+                    <Track.Thumb>
+                        <Thumb Style="{StaticResource SliderThumb}" />
+                    </Track.Thumb>
+                    <Track.IncreaseRepeatButton>
+                        <RepeatButton Command="Slider.IncreaseLarge" Style="{StaticResource SliderRepeatButton}" />
+                    </Track.IncreaseRepeatButton>
+                </Track>
+            </Grid>
+        </ControlTemplate>
+
+        <Style x:Key="Horizontal_Slider" TargetType="Slider">
+            <Setter Property="Focusable" Value="False" />
+            <Setter Property="SnapsToDevicePixels" Value="true" />
+            <Setter Property="OverridesDefaultStyle" Value="true" />
+            <Style.Triggers>
+                <Trigger Property="Orientation" Value="Horizontal">
+                    <Setter Property="MinHeight" Value="15" />
+                    <Setter Property="MinWidth" Value="50" />
+                    <Setter Property="Template" Value="{StaticResource Slider}" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+    </Window.Resources>
+
     <DockPanel Name="RootWindow">
+
         <DockPanel
             Name="TitleBar"
             Background="Transparent"
@@ -37,7 +147,8 @@
                 DockPanel.Dock="Right"
                 FontFamily="Segoe MDL2 Assets"
                 Foreground="#FFCD1A2B"
-                RenderTransformOrigin="0,0.714" />
+                RenderTransformOrigin="0,0.714"
+                Style="{StaticResource ButtonTemplate}" />
             <Button
                 Name="MinimiseButton"
                 Margin="0,2,2,0"
@@ -49,7 +160,8 @@
                 Content="&#xE949;"
                 DockPanel.Dock="Right"
                 FontFamily="Segoe MDL2 Assets"
-                Foreground="White" />
+                Foreground="White"
+                Style="{StaticResource ButtonTemplate}" />
             <Button
                 Name="PinToTopButton"
                 Width="15"
@@ -60,7 +172,8 @@
                 Click="OnClickPinButton"
                 DockPanel.Dock="Right"
                 FontFamily="Segoe MDL2 Assets"
-                Foreground="#FF282828">
+                Foreground="#FF282828"
+                Style="{StaticResource ButtonTemplate}">
                 <Button.Background>
                     <ImageBrush ImageSource="Assets/Images/Icons/pin-icon.png" />
                 </Button.Background>
@@ -69,7 +182,7 @@
 
         <Grid Width="400">
             <Image
-                Name="AlbumArtworkImage"
+                x:Name="AlbumArtworkImage"
                 Width="75"
                 Height="75"
                 Margin="12,0,0,0"
@@ -81,13 +194,13 @@
                 </Image.Source>
             </Image>
             <TextBlock
-                Name="TitleText"
+                x:Name="TitleText"
                 Margin="92,0,15,61"
                 FontFamily="Lato"
                 FontSize="18"
                 Foreground="White" />
             <ProgressBar
-                Name="SongProgress"
+                x:Name="SongProgress"
                 Width="400"
                 Height="10"
                 Margin="0,84,0,0"
@@ -97,7 +210,7 @@
                 Foreground="#FF1DB954"
                 Value="0" />
             <Button
-                Name="LikeSongButton"
+                x:Name="LikeSongButton"
                 Width="16"
                 Height="15"
                 Margin="0,60,281,0"
@@ -107,72 +220,62 @@
                 BorderThickness="0"
                 Click="OnClickLike"
                 ClickMode="Press"
-                Foreground="#FF282828">
+                Foreground="{x:Null}"
+                Style="{StaticResource ButtonTemplate}">
                 <Button.Background>
                     <ImageBrush ImageSource="Assets/Images/Icons/unliked-icon.png" Stretch="Uniform" />
                 </Button.Background>
             </Button>
             <Button
-                Name="UnlikeSongButton"
+                x:Name="UnlikeSongButton"
                 Width="16"
                 Height="15"
                 Margin="0,60,281,0"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Top"
-                BorderBrush="Black"
+                d:IsHidden="True"
+                BorderBrush="{x:Null}"
                 BorderThickness="0"
                 Click="OnClickLike"
                 ClickMode="Press"
+                Foreground="{x:Null}"
                 IsEnabled="False"
+                Style="{StaticResource ButtonTemplate}"
                 Visibility="Hidden">
                 <Button.Background>
                     <ImageBrush ImageSource="Assets/Images/Icons/liked-icon.png" Stretch="Uniform" />
                 </Button.Background>
             </Button>
             <Button
-                Name="PlaybackButton"
-                Width="9"
-                Height="15"
-                Margin="0,60,131,0"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Top"
-                BorderBrush="{x:Null}"
-                BorderThickness="0"
-                Click="OnClickPlayPause"
-                ClickMode="Press"
-                Foreground="#FF282828">
-                <Button.Background>
-                    <ImageBrush ImageSource="Assets/Images/Icons/play-icon.png" Stretch="Uniform" />
-                </Button.Background>
-            </Button>
-            <Button
-                Name="NextSongButton"
+                x:Name="NextSongButton"
                 Width="11"
                 Height="15"
-                Margin="0,60,50,0"
+                Margin="0,60,93,0"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Top"
                 BorderBrush="{x:Null}"
                 BorderThickness="0"
                 Click="OnClickNextSong"
                 ClickMode="Press"
-                Foreground="#FF282828">
+                Foreground="{x:Null}"
+                Style="{StaticResource ButtonTemplate}">
                 <Button.Background>
                     <ImageBrush ImageSource="Assets/Images/Icons/forward-icon.png" Stretch="Uniform" />
                 </Button.Background>
             </Button>
             <Button
-                Name="PreviousSongButton"
+                x:Name="PreviousSongButton"
                 Width="11"
                 Height="16"
-                Margin="0,59,212,0"
+                Margin="0,59,207,0"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Top"
                 BorderBrush="{x:Null}"
                 BorderThickness="0"
                 Click="OnClickPreviousSong"
                 ClickMode="Press"
-                Foreground="#FF282828">
+                Foreground="{x:Null}"
+                Style="{StaticResource ButtonTemplate}">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform />
@@ -186,34 +289,101 @@
                 </Button.Background>
             </Button>
             <Button
-                x:Name="PauseButton"
+                x:Name="PlaybackButton"
                 Width="9"
                 Height="15"
-                Margin="0,60,131,0"
+                Margin="0,60,151,0"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Top"
-                BorderBrush="Black"
+                BorderBrush="{x:Null}"
                 BorderThickness="0"
                 Click="OnClickPlayPause"
                 ClickMode="Press"
+                Foreground="{x:Null}"
+                Style="{StaticResource ButtonTemplate}">
+                <Button.Background>
+                    <ImageBrush ImageSource="Assets/Images/Icons/play-icon.png" Stretch="Uniform" />
+                </Button.Background>
+            </Button>
+            <Button
+                x:Name="PauseButton"
+                Width="9"
+                Height="15"
+                Margin="0,60,151,0"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                d:IsHidden="True"
+                BorderBrush="{x:Null}"
+                BorderThickness="0"
+                Click="OnClickPlayPause"
+                ClickMode="Press"
+                Foreground="{x:Null}"
                 IsEnabled="False"
+                Style="{StaticResource ButtonTemplate}"
                 Visibility="Hidden">
                 <Button.Background>
                     <ImageBrush ImageSource="Assets/Images/Icons/pause-icon.png" Stretch="Uniform" />
                 </Button.Background>
             </Button>
             <TextBlock
-                Name="ArtistText"
+                x:Name="ArtistText"
                 Margin="92,20,15,56"
                 FontFamily="Lato Light"
                 FontSize="14"
                 Foreground="White" />
             <TextBlock
-                Name="ContextText"
+                x:Name="ContextText"
                 Margin="92,36,15,40"
                 FontFamily="Lato Light"
                 FontSize="12"
                 Foreground="White" />
+            <Button
+                x:Name="RepeatOffButton"
+                Width="14"
+                Height="15"
+                Margin="0,60,16,0"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                BorderBrush="{x:Null}"
+                BorderThickness="0"
+                Click="RepeatOnAction"
+                ClickMode="Press"
+                Foreground="#FF282828"
+                Style="{StaticResource ButtonTemplate}">
+                <Button.Background>
+                    <ImageBrush ImageSource="repeat-off-icon.png" />
+                </Button.Background>
+            </Button>
+            <Button
+                x:Name="RepeatOnButton"
+                Width="14"
+                Height="15"
+                Margin="0,60,16,0"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                d:IsHidden="True"
+                BorderBrush="{x:Null}"
+                BorderThickness="0"
+                Click="RepeatOffAction"
+                ClickMode="Press"
+                Foreground="#FF282828"
+                Style="{StaticResource ButtonTemplate}"
+                Visibility="Hidden">
+                <Button.Background>
+                    <ImageBrush ImageSource="repeat-on-icon.png" />
+                </Button.Background>
+            </Button>
+            <Slider
+                x:Name="VolumeSlider"
+                Margin="296,40,16,41"
+                LargeChange="10"
+                Maximum="100"
+                SmallChange="10"
+                Style="{StaticResource Horizontal_Slider}"
+                Thumb.DragCompleted="Slider_DragCompleted"
+                TickFrequency="10"
+                Value="15" />
+
             <!-- <Button x:Name="EditorButton"
                 BorderBrush="Black" BorderThickness="0"
                 Click="OnClickEditorButton" ClickMode="Press" HorizontalAlignment="Right" Width="5" Height="15" VerticalAlignment="Top" Margin="0,29,5,0" RenderTransformOrigin="0.5,0.5">
