--- a/MiniSpotify/MiniSpotify/App.xaml
+++ b/MiniSpotify/MiniSpotify/App.xaml
@@ -1,10 +1,9 @@
-﻿<Application x:Class="MiniSpotify.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MiniSpotify"
-             StartupUri="MainWindow.xaml"
-             Exit="Application_Exit">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+    x:Class="MiniSpotify.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:MiniSpotify"
+    Exit="Application_Exit"
+    StartupUri="MainWindow.xaml">
+    <Application.Resources />
 </Application>
